--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,14 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
-indexmap = { version = "2.3.0", features = ["serde"] }
+askama = { version = "0.12.1", features = ["with-axum"] }
+askama_axum = "0.4.0"
+axum = { version = "0.7.5", features = ["ws"] }
 serde = { version = "1.0.207", features = ["derive"] }
+futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
 serialport = "4.5.0"
 thiserror = "1.0.63"
+tokio = { version = "1.39.2", features = ["macros", "net", "rt-multi-thread", "sync"] }
 toml = "0.8.19"
+tower-http = { version = "0.5.2", features = ["fs"] }
+# tokio-serial = { git = "https://github.com/barafael/tokio-serial.git", version = "5.4.4" }
