--- a/serri.toml
+++ b/serri.toml
@@ -1,10 +1,26 @@
-ports."01. Short" = "/dev/ttyUSB0:115200"
+listen = "127.0.0.1:8080"
 
-[ports."02. Description"]
-description = "Test 1"
-connection = "/dev/ttyUSB0:115200:8N1"
+[[serial_port]]
+device = "/dev/ttyUSB0:115200"
 
-[ports."03. Long"]
-description = "Long test"
-device = "/dev/ttyUBS0"
+[[serial_port]]
+title = "Test 1"
+device = "/dev/ttyUSB1:115200:7E2"
+
+[[serial_port]]
+description = "Port 1 in the adapter"
+device = "/dev/ttyUSB1:115200:7E2"
+
+[[serial_port]]
+title = "My Cool Device"
+description = "Port 2 in the adapter"
+device = "/dev/ttyUSB2:115200:8N1"
+
+[[serial_port]]
+title = "Long test"
+device = "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.2.1:1.0-port0"
 baud_rate = 115200
+data_bits = 6
+parity = "Odd"
+stop_bits = 2
+flow_control = "hw"
