--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ thiserror = "1.0.63"
 tokio = { version = "1.39.2", features = ["macros", "net", "rt-multi-thread", "sync"] }
 toml = "0.8.19"
 tower-http = { version = "0.5.2", features = ["fs"] }
-# tokio-serial = { git = "https://github.com/barafael/tokio-serial.git", version = "5.4.4" }
+tokio-util = "0.7.11"
