--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "source": [
-    "templates/index.js",
-    "templates/device.js"
-  ],
   "scripts": {
     "watch": "parcel watch --no-hmr",
-    "build": "parcel build"
+    "build": "parcel build templates/*.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
