--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,14 @@ anyhow = "1.0.86"
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.4.0"
 axum = { version = "0.7.5", features = ["ws"] }
-serde = { version = "1.0.207", features = ["derive"] }
 futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
+serde = { version = "1.0.207", features = ["derive"] }
 serialport = "4.5.0"
 thiserror = "1.0.63"
 tokio = { version = "1.39.2", features = ["macros", "net", "rt-multi-thread", "sync"] }
 toml = "0.8.19"
 tower-http = { version = "0.5.2", features = ["fs"] }
 tokio-util = "0.7.11"
+
+mio-serial = { path = "../mio-serial" }
+mio = { version = "1.0.2", features = ["os-poll"] }
