--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ toml = "0.8.19"
 tower-http = { version = "0.5.2", features = ["fs"] }
 tokio-util = "0.7.11"
 tinytemplate = "1.2.1"
+mio-serial = "5.0.5"
+mio = { version = "0.8.11", features = ["os-ext", "os-poll"] }
 
 [workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
 pre-build = [
