--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1.0.86"
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.4.0"
 axum = { version = "0.7.5", features = ["ws"] }
-futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
+# futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
 serde = { version = "1.0.207", features = ["derive"] }
 serialport = "4.5.0"
 thiserror = "1.0.63"
@@ -19,6 +19,7 @@ tokio-util = "0.7.11"
 tinytemplate = "1.2.1"
 mio-serial = "5.0.5"
 mio = { version = "0.8.11", features = ["os-ext", "os-poll"] }
+ringbuf = "0.4.4"
 
 [workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
 pre-build = [
