--- a/serri.toml
+++ b/serri.toml
@@ -5,27 +5,27 @@ banner = "Connected to {device}"
 read_buffer_size = 512
 device = "/dev/ttyUSB0:115200"
 
-[[serial_port]]
-title = "9600 baud"
-read_buffer_size = 32
-device = "/dev/ttyUSB0:9600"
-
-[[serial_port]]
-title = "300 baud"
-description = "Serial like its a Bell 103"
-read_buffer_size = 1
-device = "/dev/ttyUSB0:300"
-
-[[serial_port]]
-title = "My Cool Device"
-description = "Cool description"
-device = "/dev/ttyUSB2:115200:8N1"
-
-[[serial_port]]
-title = "Long test"
-device = "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.2.1:1.0-port0"
-baud_rate = 115200
-data_bits = 6
-parity = "Odd"
-stop_bits = 2
-flow_control = "hw"
+#[[serial_port]]
+#title = "9600 baud"
+#read_buffer_size = 32
+#device = "/dev/ttyUSB0:9600"
+#
+#[[serial_port]]
+#title = "300 baud"
+#description = "Serial like its a Bell 103"
+#read_buffer_size = 1
+#device = "/dev/ttyUSB0:300"
+#
+#[[serial_port]]
+#title = "My Cool Device"
+#description = "Cool description"
+#device = "/dev/ttyUSB2:115200:8N1"
+#
+#[[serial_port]]
+#title = "Long test"
+#device = "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.2.1:1.0-port0"
+#baud_rate = 115200
+#data_bits = 6
+#parity = "Odd"
+#stop_bits = 2
+#flow_control = "hw"
