--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ askama_axum = "0.4.0"
 axum = { version = "0.7.5", features = ["ws"] }
 # futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
 serde = { version = "1.0.207", features = ["derive"] }
-serialport = "4.5.0"
+serialport = { version = "4.5.0", features = ["serde"] }
 thiserror = "1.0.63"
 tokio = { version = "1.39.2", features = ["macros", "net", "rt-multi-thread", "sync"] }
 toml = "0.8.19"
