--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,22 +8,22 @@ anyhow = "1.0.86"
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.4.0"
 axum = { version = "0.7.5", features = ["ws"] }
-# futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
+dashmap = "6.0.1"
+futures = "0.3.30"
+ringbuf = "0.4.4"
 serde = { version = "1.0.207", features = ["derive"] }
 serialport = { version = "4.5.0", features = ["serde"] }
 thiserror = "1.0.63"
-tokio = { version = "1.39.2", features = ["macros", "net", "rt-multi-thread", "sync"] }
-toml = "0.8.19"
-tower-http = { version = "0.5.2", features = ["fs"] }
-tokio-util = "0.7.11"
 tinytemplate = "1.2.1"
-# mio-serial = "5.0.5"
-# mio = { version = "0.8.11", features = ["os-ext", "os-poll"] }
-ringbuf = "0.4.4"
+tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "signal", "sync"] }
+toml = "0.8.19"
+tower-http = { version = "0.5.2", features = ["fs", "trace"] }
+tokio-util = "0.7.11"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 mio = { version = "1.0.2", features = ["os-ext", "os-poll"] }
 mio-serial = { path = "../mio-serial" }
-dashmap = "6.0.1"
 
 [workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
 pre-build = [
