--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ serde = { version = "1.0.207", features = ["derive"] }
 serialport = { version = "4.5.0", features = ["serde"] }
 thiserror = "1.0.63"
 tinytemplate = "1.2.1"
-tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "signal", "sync"] }
+tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
 toml = "0.8.19"
 tower-http = { version = "0.5.2", features = ["fs", "trace"] }
 tokio-util = "0.7.11"
