--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 mio = { version = "1.0.2", features = ["os-ext", "os-poll"] }
 mio-serial = { git = "https://github.com/Spanfile/mio-serial.git" }
 
-[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
+[workspace.metadata.cross.build]
 pre-build = [
     "dpkg --add-architecture $CROSS_DEB_ARCH",
     "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH"
