--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,10 +18,16 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
+      - name: Install library dependencies
+        uses: awalsh128/cache-apt-pkgs-action@v1
+        with:
+          packages: libudev-dev
+          version: 1.0
       - name: Install Rust
         run: rustup update stable
       - name: Install cross-compilation tools
         uses: taiki-e/setup-cross-toolchain-action@v1
         with:
           target: ${{ matrix.target }}
-      - run: cargo build --release
+      - name: Build release binary
+        run: cargo build --release
