--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,9 +12,9 @@ jobs:
     strategy:
       matrix:
         target:
-          - x86_64-unknown-freebsd
+          - x86_64-unknown-linux-gnu
           - aarch64-unknown-linux-gnu
-          - x86_64-pc-windows-msvc
+          - x86_64-pc-windows-gnu
 
     runs-on: ubuntu-latest
     steps:
