--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install additional libraries
+        if: ${{ matrix.target == 'x86_64-unknown-linux-gnu' }}
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: libudev-dev
+          version: 1.0
       - name: Build release binary
         uses: houseabsolute/actions-rust-cross@v0
         with:
