--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           target: ${{ matrix.target }}
           args: "--locked --release"
-          strip: true
+          toolchain: nightly
