--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,10 @@ jobs:
         with:
           packages: libudev-dev
           version: 1.0
+      - name: Cache Docker images
+        uses: ScribeMD/docker-cache@v0
+        with:
+          key: docker-${{ runner.os }}-${{ matrix.target }}
       - name: Build release binary
         uses: houseabsolute/actions-rust-cross@v0
         with:
