--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,3 +35,20 @@ jobs:
           target: ${{ matrix.target }}
           args: "--locked --release"
           toolchain: nightly
+
+  frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+      - name: Parcel cache
+        uses: actions/cache@v4
+        with:
+          path: .parcel-cache
+          key: parcel-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+      - run: npm ci
+      - run: npm run build
