--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   CROSS_BUILD_OPTS: --cache-from type=gha --cache-to type=gha,mode=max
-  CROSS_DEBUG: true
+  CROSS_DEBUG: "1"
 
 jobs:
   backend:
