--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,8 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  CROSS_BUILD_OPTS: --cache-from type=gha --cache-to type=gha,mode=max
-  CROSS_DEBUG: "1"
+  # CROSS_BUILD_OPTS: --cache-from type=gha --cache-to type=gha,mode=max
+  # CROSS_DEBUG: "1"
 
 jobs:
   backend:
@@ -28,15 +28,15 @@ jobs:
           packages: libudev-dev
           version: 1.0
           
-      - name: Set up Docker Buildx
-        if: ${{ matrix.target != 'x86_64-unknown-linux-gnu' }}
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #  if: ${{ matrix.target != 'x86_64-unknown-linux-gnu' }}
+      #  uses: docker/setup-buildx-action@v3
         
-      - name: Cache Docker images
-        if: ${{ matrix.target != 'x86_64-unknown-linux-gnu' }}
-        uses: ScribeMD/docker-cache@0.5.0
-        with:
-          key: docker-${{ runner.os }}-${{ matrix.target }}
+      # - name: Cache Docker images
+      #   if: ${{ matrix.target != 'x86_64-unknown-linux-gnu' }}
+      #   uses: ScribeMD/docker-cache@0.5.0
+      #   with:
+      #     key: docker-${{ runner.os }}-${{ matrix.target }}
           
       - name: Build release binary
         uses: houseabsolute/actions-rust-cross@v0
