--- a/serri.sample.toml
+++ b/serri.sample.toml
@@ -35,8 +35,8 @@ device = "/dev/ttyUSB0:300:8N1"
 
 [[serial_port]]
 title = "Long device path"
+# this device path contains colons, which means the serial parameters have to be configured separately
 device = "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.2.1:1.0-port0"
-# serial parameters can also be individually configured
 baud_rate = 115200
 data_bits = 8
 parity = "None"
